--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -201,7 +201,7 @@ theme:
     # | - https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#accent-color              |
     # |                                                                                                    |
     # +----------------------------------------------------------------------------------------------------+
-    accent: 'indigo'
+    accent: 'black'
     
   # +------------------------------------------------------------------------------------------------------+
   # |                                                                                                      |
