--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -191,7 +191,7 @@ theme:
     # | - https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#primary-color             |
     # |                                                                                                    |
     # +----------------------------------------------------------------------------------------------------+
-    primary: 'indigo'
+    primary: 'black'
     
     # +----------------------------------------------------------------------------------------------------+
     # |                                                                                                    |
@@ -201,7 +201,7 @@ theme:
     # | - https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#accent-color              |
     # |                                                                                                    |
     # +----------------------------------------------------------------------------------------------------+
-    accent: 'black'
+    accent: 'blackindigo'
     
   # +------------------------------------------------------------------------------------------------------+
   # |                                                                                                      |
